Upgrade Clojure, ClojureScript, Hoplon. Add `cljs-repl`; disable `dirac`.